@@ -98,8 +98,8 @@ class movies:
         self.trakthistory_link = 'https://api.trakt.tv/users/me/history/movies?limit=40&page=1'
         self.onDeck_link = 'https://api.trakt.tv/sync/playback/movies?extended=full&limit=20'
         self.imdblists_link = 'https://www.imdb.com/user/ur%s/lists?tab=all&sort=modified&order=desc&filter=titles' % self.imdb_user
-        self.imdblist_link = 'https://www.imdb.com/list/%s/?view=detail&sort=date_added,desc&title_type=movie,short,tvMovie&start=1'
-        self.imdblist2_link = 'https://www.imdb.com/list/%s/?view=detail&sort=alpha,asc&title_type=movie,short,tvMovie&start=1'
+        self.imdblist_link = 'https://www.imdb.com/list/%s/?view=detail&sort=date_added,desc&title_type=movie,short,tvMovie,video&start=1'
+        self.imdblist2_link = 'https://www.imdb.com/list/%s/?view=detail&sort=alpha,asc&title_type=movie,short,tvMovie,video&start=1'
         self.imdbwatchlist_link = 'https://www.imdb.com/user/ur%s/watchlist?sort=date_added,desc' % self.imdb_user
         self.imdbwatchlist2_link = 'https://www.imdb.com/user/ur%s/watchlist?sort=alpha,asc' % self.imdb_user
 
@@ -842,6 +842,11 @@ class movies:
         except:
             pass
 
+        if control.setting('imdb.sort.order') == '1':
+            list = self.imdblist2_link
+        else:
+            list = self.imdblist_link
+
         for item in items:
             try:
                 name = client.parseDOM(item, 'a')[0]
@@ -850,7 +855,7 @@ class movies:
 
                 url = client.parseDOM(item, 'a', ret='href')[0]
                 url = url.split('/list/', 1)[-1].strip('/')
-                url = self.imdblist_link % url
+                url = list % url
                 url = client.replaceHTMLCodes(url)
                 url = url.encode('utf-8')
 
