@@ -15,6 +15,7 @@
         <setting type="lsep" label="32319" />
         <setting id="movie.widget" type="enum" label="32320" lvalues="32302|32321|32322|32323|32324|32580" default="1" />
         <setting id="lists.widget" type="enum" label="32329" lvalues="32302|32301" default="1" />
+        <setting id="imdb.sort.order" type="enum" label="32567" lvalues="32568|32569" default="0" />
         <setting type="lsep" label="32002" />
         <setting id="flatten.tvshows" type="bool" label="32317" default="false" />
         <setting id="showunaired" type="bool" label="32570" default="true" />
