@@ -1,3 +1,7 @@
+[B][COLOR gold]v1.9.22[/COLOR][/B]
+- Added IMDb watchlist/user lists sorting options
+- Added support for more content types for IMDb watchlist/user lists
+
 [B][COLOR gold]v1.9.21[/COLOR][/B]
 - Fixed seasons/episodes sort order (another regression from the tvdb fiasko)
 - Added AppleTV+ to Networks
